# Inverted-Pendulum-Robot

./: .gitignore  README.md  main.py  model.pkl  model.py  pendulum_env.py  plot.py  pyproject.toml  pytorch_cartpole_example.py  robot_control.py  run_model.py  serial_multithread_test.py  util.py
arduino/main/: main.ino
arduino/motor_test/: motor_test.ino
arduino/motor_test_flexy/: motor_test_flexy.ino
arduino/serial_comm_test/: serial_comm_test.ino
conf/: config.yaml
conf/mode/: eval.yaml  train.yaml
conf/mode/model/: PPO.yaml  SAC.yaml
conf/model/: SAC.yaml
references/: pytorch_cartpole_example.py
references/Qube Package/: B_test.py  setup.py
robot/CAD/: inverted_pendulum_robot_assy.f3d  inverted_pendulum_robot_assy.step
robot/arduino/main/: main.ino
robot/arduino/tests/read_sensor/: read_sensor.ino
src/: main.py  pendulum_env.py  run_model.py  util.py
